--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://gitlab.com/ukonsas28/ci_cd_test#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.312.0",
+    "aws-sdk": "^2.1359.0",
     "nodemailer": "^6.9.1"
   }
 }
