--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.312.0",
     "aws-sdk": "^2.1359.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "uuid": "^9.0.0"
   }
 }
